# EngineCL

./: .clang-format  .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/modules/: OpenCL.cmake  SetFlags.cmake  SetLibraries.cmake
examples/: CMakeLists.txt
examples/common/: io.cpp  io.hpp
examples/tier-2/: main.cpp  saxpy.cl  saxpy.cpp  saxpy.hpp
include/: Buffer.hpp  CLUtils.hpp  Device.hpp  EngineCL.hpp  Inspector.hpp  NDRange.hpp  Runtime.hpp  Scheduler.hpp  Semaphore.hpp  Work.hpp  config.hpp
include/schedulers/: Dynamic.hpp  Static.hpp
src/: Buffer.cpp  CLUtils.cpp  CMakeLists.txt  Device.cpp  Inspector.cpp  Runtime.cpp
src/schedulers/: Dynamic.cpp  Static.cpp
test/: CMakeLists.txt  Semaphore.cpp  tests.cpp  tests.hpp
